instructions.Instructions.scala.error
Erreur de compilation :
Instructions:13: error: not found: value leverBrosse
leverBrosse()
^